--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,6 @@ KV_REST_API_URL=
 KV_REST_API_TOKEN=
 KV_REST_API_READ_ONLY_TOKEN=
 
-# Rapid API
-RAPID_API_KEY=
-RAPID_API_HOST=
+# Rapid API Instagram
+RAPID_API_INSTAGRAM_KEY=
+RAPID_API_INSTAGRAM_HOST=
