--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "postcss": "^8",
     "ramda": "^0.30.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "yargs": "^17.7.2"
   },
   "packageManager": "pnpm@8.15.1+sha256.245fe901f8e7fa8782d7f17d32b6a83995e2ae03984cb5b62b8949bfdc27c7b5"
 }
