--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "axios": "^1.6.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "fast-csv": "^5.0.1",
     "postcss": "^8",
     "ramda": "^0.30.0",
     "tailwindcss": "^3.4.1",
